style: fix modal header alignment

--- a/src/styles/_override.scss
+++ b/src/styles/_override.scss
@@ -18,6 +18,7 @@ $modal-backdrop-opacity: 0.8;
 $modal-content-border-radius: 12px;
 $modal-content-bg: $secondary;
 $modal-header-border-color: $primary;
+$modal-header-padding-y: 0.25rem;
 //divider
 $dropdown-divider-bg: $primary;
 
